# cloud-aware-ai-stride

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  reproduce.yml  tests.yml
cloud_stride/: __init__.py  cli.py  experiment.py  metrics.py  report.py  schemas.py  scoring.py  taxonomy.py  yamlio.py
data/catalogs/: cloud_aware_stride_catalog.yaml  control_effectiveness_catalog.yaml  mitigation_catalog.yaml
data/expected/: expected_ai_threats.yaml  expected_critical_threats.yaml
data/scenarios/: ai_pipeline_scenarios.yaml
docs/: analyst_instructions.md  manuscript_tables.md  mitigation_schema.md  reproducibility.md  residual_risk_schema.md  scenario_schema.md  threat_catalog_schema.md  threat_modeling_guide.md
examples/: threats.yaml  threats_baseline.yaml
experiments/: __init__.py  common.py  run_mitigation_analysis.py  run_residual_risk_analysis.py  run_threat_modeling.py
paper/: manuscript.md  references.bib
reports/: example_report.md  scored_threats.yaml
scenarios/: s01_customer_support_chatbot.yaml  s02_healthcare_claims_assistant.yaml  s03_financial_document_summarizer.yaml  s04_code_generation_assistant.yaml  s05_mcp_enterprise_agent.yaml  s06_hr_policy_assistant.yaml  s07_mlops_deployment_pipeline.yaml  s08_multitenant_analytics_assistant.yaml  s09_security_operations_copilot.yaml  s10_cloud_cost_optimization_agent.yaml  s11_data_science_notebook_assistant.yaml  s12_sales_proposal_generator.yaml
taxonomy/: cloud_aware_stride_taxonomy.yaml  mitre_atlas_mapping.yaml  nist_ai_rmf_mapping.yaml  owasp_llm_mapping.yaml
tests/: test_metrics.py  test_mitigation_mapping.py  test_pytest_demo.py  test_residual_risk.py  test_scenario_loader.py  test_scoring.py  test_suite.py  test_taxonomy.py  test_threat_mapping.py  test_validation.py
(+18 files in other folders)
