[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-aware-stride-ai-pipelines"
version = "0.1.0"
description = "Paper 2-centered Cloud-Aware STRIDE research artifact for AI pipeline threat modeling, mitigation mapping, and residual-risk prioritization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Saurabh Gupta"}
]
keywords = ["threat-modeling", "stride", "llm", "rag", "mcp", "mlops", "residual-risk", "research"]
dependencies = [
  "pandas",
  "numpy",
  "pyyaml",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloud_stride*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
